2006-12-14  Joseph J. McCarthy <mccarthy@granular.pitt.edu>

	* main.c: change behavior of "close" to iconify (to aid in alarm handling)	 

2006-11-27  Florian Boor  <florian.boor@kernelconcepts.de>

    * export-vcal.c (export_event_as_string): Fix export of daily recurring
      events. Contributed by Graham Cobb <g+gpe@cobb.uk.net>, fixes #3

2006-11-14  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c (set_title): Apply patch by Matt Reimer to show day of week in
      title.

2006-09-16  Florian Boor  <florian.boor@kernelconcepts.de>

    * TODO: Mark some tasks as done.
    * day_view.c (event_rect_expose): Display start and end times.
    * event-ui.c (build_edit_event_window): Fix button order and border.
      (build_recurrence_page): Use GPE spacing functions instead of constant.

2006-08-31  Florian Boor  <florian.boor@kernelconcepts.de>

    * event-menu.c (event_menu_new): Change menu structure to make event 
      functions easier to access. Seperate translatable strings from markup.

2006-08-28  Neal H. Walfield  <neal@gnu.org>

	* TODO: New file.

2006-08-28  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c (build_recurrence_page): Don't use S->INCREMENT_UNIT
	before it is initialized.  Use SPIN instead.

2006-08-10  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c (main): Set absolute path for local files.

2006-08-08  Neal H. Walfield  <neal@gnu.org>

	* calendar-update.c (struct info): Add field busy.
	(pushed): Set INFO->BUSY to FALSE.
	(pulled): Likewise.
	(calendar_push_internal): Set INFO->BUSY to TRUE.
	(calendar_pull_internal): Set INFO->BUSY to TRUE.
	(refresh): Only synchronize if INFO->BUSY is FALSE.  Refresh at
	most once every 10 seconds.

2006-08-07  Florian Boor  <florian.boor@kernelconcepts.de>

    * export-vcal.c (export_event_as_vevent): Set modification time.
    * export-vcal.c (export_event_as_vevent): Revert last change, fixed
      libmimedir.

2006-08-04  Florian Boor  <florian.boor@kernelconcepts.de>