@@ -1,3 +1,7 @@
+2006-12-28  Neal H. Walfield  <neal@gnu.org>
+
+	* autogen.sh: Just use autoreconf.
+
 2006-12-14  Joseph J. McCarthy <mccarthy@granular.pitt.edu>
 
 	* main.c: change behavior of "close" to iconify (to aid in alarm handling)	 
